@@ -1,3 +1,8 @@
+2003-08-22  John Levon  <levon@movementarian.org>
+
+	* daemon/oprofiled.c: read new /dev/oprofile/pointer_size
+	in preference to kcore. kcore code will eventually go.
+
 2003-08-21  John Levon  <levon@movementarian.org>
 
 	* libutil++/op_bfd.cpp: update gcc2_compiled. comment
